Corrected course-roles text-align and width settings on tag cloud

--- a/assets/less/layout/course.less
+++ b/assets/less/layout/course.less
@@ -9,11 +9,11 @@
 
     .course-roles {
         .make-row();
-        text-alig: center;
+        text-align: center;
 
         ul.sb-tag-cloud {
             list-style: none;
-            width: 60px;
+            width: 60%;
             margin: 10px auto;
 
             li {
