--- a/style/moodle.css
+++ b/style/moodle.css
@@ -15477,11 +15477,11 @@ Created  : 09 Mar 2015
 .coursebox .course-roles {
   margin-left: -15px;
   margin-right: -15px;
-  text-alig: center;
+  text-align: center;
 }
 .coursebox .course-roles ul.sb-tag-cloud {
   list-style: none;
-  width: 60px;
+  width: 60%;
   margin: 10px auto;
 }
 .coursebox .course-roles ul.sb-tag-cloud li {
